// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordion /> Default story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class=""
  >
    <div
      class="accordion-row"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-headlessui-state=""
        data-testid="accordion-button"
        id="headlessui-disclosure-button-:r0:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> DefaultOpen story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class=""
  >
    <div
      class="accordion-row"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r15:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-headlessui-state="open"
        data-testid="accordion-button"
        id="headlessui-disclosure-button-:r14:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel"
        data-headlessui-state="open"
        data-testid="accordion-panel"
        id="headlessui-disclosure-panel-:r15:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> Small story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class=""
  >
    <div
      class="accordion-row"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--sm"
        data-headlessui-state=""
        data-testid="accordion-button"
        id="headlessui-disclosure-button-:r2:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading accordion-button__heading--sm"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> SmallOpen story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class=""
  >
    <div
      class="accordion-row"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r17:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--sm"
        data-headlessui-state="open"
        data-testid="accordion-button"
        id="headlessui-disclosure-button-:r16:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading accordion-button__heading--sm"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--sm"
        data-headlessui-state="open"
        data-testid="accordion-panel"
        id="headlessui-disclosure-panel-:r17:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> Stacked story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class=""
  >
    <div
      class="accordion-row"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r5:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-headlessui-state="open"
        data-testid="accordion-button-1"
        id="headlessui-disclosure-button-:r4:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel"
        data-headlessui-state="open"
        data-testid="accordion-panel-1"
        id="headlessui-disclosure-panel-:r5:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
    <div
      class="accordion-row"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-headlessui-state=""
        data-testid="accordion-button-2"
        id="headlessui-disclosure-button-:r6:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-row"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-headlessui-state=""
        data-testid="accordion-button-3"
        id="headlessui-disclosure-button-:r8:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-row"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-headlessui-state=""
        data-testid="accordion-button-4"
        id="headlessui-disclosure-button-:ra:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> StackedOpen story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class=""
  >
    <div
      class="accordion-row"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r19:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-headlessui-state="open"
        id="headlessui-disclosure-button-:r18:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel"
        data-headlessui-state="open"
        id="headlessui-disclosure-panel-:r19:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
    <div
      class="accordion-row"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r1b:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-headlessui-state="open"
        id="headlessui-disclosure-button-:r1a:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel"
        data-headlessui-state="open"
        id="headlessui-disclosure-panel-:r1b:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
    <div
      class="accordion-row"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r1d:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-headlessui-state="open"
        id="headlessui-disclosure-button-:r1c:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel"
        data-headlessui-state="open"
        id="headlessui-disclosure-panel-:r1d:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
    <div
      class="accordion-row"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r1f:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-headlessui-state="open"
        id="headlessui-disclosure-button-:r1e:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel"
        data-headlessui-state="open"
        id="headlessui-disclosure-panel-:r1f:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> StackedOutline story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class="accordion--outline"
  >
    <div
      class="accordion-row accordion-row--outline"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:rl:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--outline"
        data-headlessui-state="open"
        data-testid="accordion-button-1"
        id="headlessui-disclosure-button-:rk:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--outline"
        data-headlessui-state="open"
        data-testid="accordion-panel-1"
        id="headlessui-disclosure-panel-:rl:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
    <div
      class="accordion-row accordion-row--outline"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--outline"
        data-headlessui-state=""
        data-testid="accordion-button-2"
        id="headlessui-disclosure-button-:rm:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-row accordion-row--outline"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--outline"
        data-headlessui-state=""
        data-testid="accordion-button-3"
        id="headlessui-disclosure-button-:ro:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-row accordion-row--outline"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--outline"
        data-headlessui-state=""
        data-testid="accordion-button-4"
        id="headlessui-disclosure-button-:rq:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> StackedOutlineOpen story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class="accordion--outline"
  >
    <div
      class="accordion-row accordion-row--outline"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r1p:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--outline"
        data-headlessui-state="open"
        id="headlessui-disclosure-button-:r1o:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--outline"
        data-headlessui-state="open"
        id="headlessui-disclosure-panel-:r1p:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
    <div
      class="accordion-row accordion-row--outline"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r1r:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--outline"
        data-headlessui-state="open"
        id="headlessui-disclosure-button-:r1q:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--outline"
        data-headlessui-state="open"
        id="headlessui-disclosure-panel-:r1r:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
    <div
      class="accordion-row accordion-row--outline"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r1t:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--outline"
        data-headlessui-state="open"
        id="headlessui-disclosure-button-:r1s:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--outline"
        data-headlessui-state="open"
        id="headlessui-disclosure-panel-:r1t:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
    <div
      class="accordion-row accordion-row--outline"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r1v:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--outline"
        data-headlessui-state="open"
        id="headlessui-disclosure-button-:r1u:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--outline"
        data-headlessui-state="open"
        id="headlessui-disclosure-panel-:r1v:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> StackedSmall story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class=""
  >
    <div
      class="accordion-row"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:rd:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--sm"
        data-headlessui-state="open"
        data-testid="accordion-button-1"
        id="headlessui-disclosure-button-:rc:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading accordion-button__heading--sm"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--sm"
        data-headlessui-state="open"
        data-testid="accordion-panel-1"
        id="headlessui-disclosure-panel-:rd:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
    <div
      class="accordion-row"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--sm"
        data-headlessui-state=""
        data-testid="accordion-button-2"
        id="headlessui-disclosure-button-:re:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading accordion-button__heading--sm"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-row"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--sm"
        data-headlessui-state=""
        data-testid="accordion-button-3"
        id="headlessui-disclosure-button-:rg:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading accordion-button__heading--sm"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-row"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--sm"
        data-headlessui-state=""
        data-testid="accordion-button-4"
        id="headlessui-disclosure-button-:ri:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading accordion-button__heading--sm"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> StackedSmallOpen story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class=""
  >
    <div
      class="accordion-row"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r1h:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--sm"
        data-headlessui-state="open"
        id="headlessui-disclosure-button-:r1g:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading accordion-button__heading--sm"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--sm"
        data-headlessui-state="open"
        id="headlessui-disclosure-panel-:r1h:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
    <div
      class="accordion-row"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r1j:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--sm"
        data-headlessui-state="open"
        id="headlessui-disclosure-button-:r1i:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading accordion-button__heading--sm"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--sm"
        data-headlessui-state="open"
        id="headlessui-disclosure-panel-:r1j:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
    <div
      class="accordion-row"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r1l:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--sm"
        data-headlessui-state="open"
        id="headlessui-disclosure-button-:r1k:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading accordion-button__heading--sm"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--sm"
        data-headlessui-state="open"
        id="headlessui-disclosure-panel-:r1l:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
    <div
      class="accordion-row"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r1n:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--sm"
        data-headlessui-state="open"
        id="headlessui-disclosure-button-:r1m:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading accordion-button__heading--sm"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--sm"
        data-headlessui-state="open"
        id="headlessui-disclosure-panel-:r1n:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> StackedSmallOutline story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class="accordion--outline"
  >
    <div
      class="accordion-row accordion-row--outline"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:rt:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--sm accordion-button--outline"
        data-headlessui-state="open"
        data-testid="accordion-button-1"
        id="headlessui-disclosure-button-:rs:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading accordion-button__heading--sm"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--sm accordion-panel--outline"
        data-headlessui-state="open"
        data-testid="accordion-panel-1"
        id="headlessui-disclosure-panel-:rt:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
    <div
      class="accordion-row accordion-row--outline"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--sm accordion-button--outline"
        data-headlessui-state=""
        data-testid="accordion-button-2"
        id="headlessui-disclosure-button-:ru:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading accordion-button__heading--sm"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-row accordion-row--outline"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--sm accordion-button--outline"
        data-headlessui-state=""
        data-testid="accordion-button-3"
        id="headlessui-disclosure-button-:r10:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading accordion-button__heading--sm"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-row accordion-row--outline"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--sm accordion-button--outline"
        data-headlessui-state=""
        data-testid="accordion-button-4"
        id="headlessui-disclosure-button-:r12:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading accordion-button__heading--sm"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> StackedSmallOutlineOpen story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class="accordion--outline"
  >
    <div
      class="accordion-row accordion-row--outline"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r21:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--sm accordion-button--outline"
        data-headlessui-state="open"
        id="headlessui-disclosure-button-:r20:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading accordion-button__heading--sm"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--sm accordion-panel--outline"
        data-headlessui-state="open"
        id="headlessui-disclosure-panel-:r21:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
    <div
      class="accordion-row accordion-row--outline"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r23:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--sm accordion-button--outline"
        data-headlessui-state="open"
        id="headlessui-disclosure-button-:r22:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading accordion-button__heading--sm"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--sm accordion-panel--outline"
        data-headlessui-state="open"
        id="headlessui-disclosure-panel-:r23:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
    <div
      class="accordion-row accordion-row--outline"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r25:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--sm accordion-button--outline"
        data-headlessui-state="open"
        id="headlessui-disclosure-button-:r24:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading accordion-button__heading--sm"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--sm accordion-panel--outline"
        data-headlessui-state="open"
        id="headlessui-disclosure-panel-:r25:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
    <div
      class="accordion-row accordion-row--outline"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r27:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--sm accordion-button--outline"
        data-headlessui-state="open"
        id="headlessui-disclosure-button-:r26:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading accordion-button__heading--sm"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--sm accordion-panel--outline"
        data-headlessui-state="open"
        id="headlessui-disclosure-panel-:r27:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> UsingComplexHeaders story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class=""
  >
    <div
      class="accordion-row"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-headlessui-state=""
        id="headlessui-disclosure-button-:r2a:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          <p
            class="text text--lg text--neutral-subtle"
          >
            <svg
              aria-hidden="true"
              class="icon m-2"
              fill="currentColor"
              height="1rem"
              style="--icon-size: 1rem;"
              viewBox="0 0 24 24"
              width="1rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 22C10.6167 22 9.31667 21.7373 8.1 21.212C6.88333 20.6873 5.825 19.975 4.925 19.075C4.025 18.175 3.31267 17.1167 2.788 15.9C2.26267 14.6833 2 13.3833 2 12C2 10.6167 2.26267 9.31667 2.788 8.1C3.31267 6.88333 4.025 5.825 4.925 4.925C5.825 4.025 6.88333 3.31233 8.1 2.787C9.31667 2.26233 10.6167 2 12 2C13.3833 2 14.6833 2.26233 15.9 2.787C17.1167 3.31233 18.175 4.025 19.075 4.925C19.975 5.825 20.6873 6.88333 21.212 8.1C21.7373 9.31667 22 10.6167 22 12C22 13.3833 21.7373 14.6833 21.212 15.9C20.6873 17.1167 19.975 18.175 19.075 19.075C18.175 19.975 17.1167 20.6873 15.9 21.212C14.6833 21.7373 13.3833 22 12 22ZM10.6 16.6L17.65 9.55L16.25 8.15L10.6 13.8L7.75 10.95L6.35 12.35L10.6 16.6Z"
              />
            </svg>
            Step 1
          </p>
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-row"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-headlessui-state=""
        id="headlessui-disclosure-button-:r2c:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          <p
            class="text text--lg text--neutral-subtle"
          >
            <svg
              aria-hidden="true"
              class="icon m-2"
              fill="currentColor"
              height="1rem"
              style="--icon-size: 1rem;"
              viewBox="0 0 24 24"
              width="1rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 22C10.6167 22 9.31667 21.7373 8.1 21.212C6.88333 20.6873 5.825 19.975 4.925 19.075C4.025 18.175 3.31267 17.1167 2.788 15.9C2.26267 14.6833 2 13.3833 2 12C2 10.6167 2.26267 9.31667 2.788 8.1C3.31267 6.88333 4.025 5.825 4.925 4.925C5.825 4.025 6.88333 3.31233 8.1 2.787C9.31667 2.26233 10.6167 2 12 2C13.3833 2 14.6833 2.26233 15.9 2.787C17.1167 3.31233 18.175 4.025 19.075 4.925C19.975 5.825 20.6873 6.88333 21.212 8.1C21.7373 9.31667 22 10.6167 22 12C22 13.3833 21.7373 14.6833 21.212 15.9C20.6873 17.1167 19.975 18.175 19.075 19.075C18.175 19.975 17.1167 20.6873 15.9 21.212C14.6833 21.7373 13.3833 22 12 22ZM10.6 16.6L17.65 9.55L16.25 8.15L10.6 13.8L7.75 10.95L6.35 12.35L10.6 16.6Z"
              />
            </svg>
            Step 1
          </p>
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-row"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-headlessui-state=""
        id="headlessui-disclosure-button-:r2e:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          <p
            class="text text--lg text--neutral-subtle"
          >
            <svg
              aria-hidden="true"
              class="icon m-2"
              fill="currentColor"
              height="1rem"
              style="--icon-size: 1rem;"
              viewBox="0 0 24 24"
              width="1rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 22C10.6167 22 9.31667 21.7373 8.1 21.212C6.88333 20.6873 5.825 19.975 4.925 19.075C4.025 18.175 3.31267 17.1167 2.788 15.9C2.26267 14.6833 2 13.3833 2 12C2 10.6167 2.26267 9.31667 2.788 8.1C3.31267 6.88333 4.025 5.825 4.925 4.925C5.825 4.025 6.88333 3.31233 8.1 2.787C9.31667 2.26233 10.6167 2 12 2C13.3833 2 14.6833 2.26233 15.9 2.787C17.1167 3.31233 18.175 4.025 19.075 4.925C19.975 5.825 20.6873 6.88333 21.212 8.1C21.7373 9.31667 22 10.6167 22 12C22 13.3833 21.7373 14.6833 21.212 15.9C20.6873 17.1167 19.975 18.175 19.075 19.075C18.175 19.975 17.1167 20.6873 15.9 21.212C14.6833 21.7373 13.3833 22 12 22ZM10.6 16.6L17.65 9.55L16.25 8.15L10.6 13.8L7.75 10.95L6.35 12.35L10.6 16.6Z"
              />
            </svg>
            Step 1
          </p>
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-row"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r2h:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-headlessui-state="open"
        id="headlessui-disclosure-button-:r2g:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          <p
            class="text text--lg text--neutral-strong"
          >
            <svg
              aria-hidden="true"
              class="icon m-2"
              fill="currentColor"
              height="1rem"
              style="--icon-size: 1rem;"
              viewBox="0 0 24 24"
              width="1rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 22C10.6167 22 9.31667 21.7373 8.1 21.212C6.88333 20.6873 5.825 19.975 4.925 19.075C4.025 18.175 3.31267 17.1167 2.788 15.9C2.26267 14.6833 2 13.3833 2 12C2 10.6167 2.26267 9.31667 2.788 8.1C3.31267 6.88333 4.025 5.825 4.925 4.925C5.825 4.025 6.88333 3.31233 8.1 2.787C9.31667 2.26233 10.6167 2 12 2C13.3833 2 14.6833 2.26233 15.9 2.787C17.1167 3.31233 18.175 4.025 19.075 4.925C19.975 5.825 20.6873 6.88333 21.212 8.1C21.7373 9.31667 22 10.6167 22 12C22 13.3833 21.7373 14.6833 21.212 15.9C20.6873 17.1167 19.975 18.175 19.075 19.075C18.175 19.975 17.1167 20.6873 15.9 21.212C14.6833 21.7373 13.3833 22 12 22Z"
              />
            </svg>
            Step 1
          </p>
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel"
        data-headlessui-state="open"
        id="headlessui-disclosure-panel-:r2h:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> UsingNumberIconInHeaders story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class=""
  >
    <div
      class="accordion-row"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-headlessui-state=""
        id="headlessui-disclosure-button-:r2i:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          <div
            class="flex flex-wrap gap-1"
          >
            <span
              aria-label="Step 1"
              class="text text--sm text--neutral-medium number-icon number-icon--base"
              role="img"
            >
              1
            </span>
            <p
              class="text text--lg text--neutral-subtle"
            >
              Step 1
            </p>
          </div>
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-row"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-headlessui-state=""
        id="headlessui-disclosure-button-:r2k:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          <div
            class="flex flex-wrap gap-1"
          >
            <span
              aria-label="Step 3"
              class="text text--sm text--neutral-medium number-icon number-icon--base"
              role="img"
            >
              2
            </span>
            <p
              class="text text--lg text--neutral-subtle"
            >
              Step 2
            </p>
          </div>
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-row"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-headlessui-state=""
        id="headlessui-disclosure-button-:r2m:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          <div
            class="flex flex-wrap gap-1"
          >
            <span
              aria-label="Step 3"
              class="text text--sm text--neutral-medium number-icon number-icon--base"
              role="img"
            >
              3
            </span>
            <p
              class="text text--lg text--neutral-subtle"
            >
              Step 3
            </p>
          </div>
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-row"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r2p:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-headlessui-state="open"
        id="headlessui-disclosure-button-:r2o:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          <div
            class="flex flex-wrap gap-1"
          >
            <span
              aria-label="Step 4"
              class="text text--sm text--neutral-medium number-icon number-icon--base"
              role="img"
            >
              4
            </span>
            <p
              class="text text--lg text--neutral-subtle"
            >
              Step 4
            </p>
          </div>
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel"
        data-headlessui-state="open"
        id="headlessui-disclosure-panel-:r2p:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> UsingRenderProp story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class=""
  >
    <div
      class="accordion-row"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-headlessui-state=""
        data-testid="accordion-button"
        id="headlessui-disclosure-button-:r28:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          Accordion Button 
          closed
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
